ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citrineos-ingress
  namespace: citrinos
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "3600"
spec:
  ingressClassName: nginx # 👈 This is the correct way now
  tls:
  - hosts:
    - dashboard.nrgsurf.de
    #- everest.nrgsurf.de
    secretName: citrinosnrg-private-key
  rules:
  - host: "dashboard.nrgsurf.de"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: directus
            port:
              number: 8055
      - path: /ws
        pathType: Prefix
        backend:
          service:
            name: citrine
            port:
              number: 8081
  # - host: "everest.nrgsurf.de"
  #   http:
  #     paths:
  #     - pathType: Prefix
  #       path: "/"
  #       backend:
  #         service:
  #           name: nodered
  #           port:
  #             number: 1880
